# free-deepl-translator

./: LICENSE  README.md  pyproject.toml
free_deepl_translator/: __init__.py  deepl_connector.py  deepl_logger.py  deepl_loop.py  deepl_main.py  deepl_msgpack.py  deepl_property.py  deepl_protobuf.py  deepl_signalr.py  deepl_translator.py  deepl_translator_type.py  deepl_write.py
free_deepl_translator/json/: protobuf.json  protobuf_exttype.json
