[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "free-deepl-translator"
version = "1.2.2"
description = "Unofficial free DeepL translator client (No auth)"
readme = { file = "README.md", content-type = "text/markdown" }
license = "MIT"
authors = [
    { name = "Darkcraft" }
]
dependencies = [
    "curl_cffi>=0.6.0",
    "msgpack>=1.0.0",
    "bbpb>=1.4.2"
]
requires-python = ">=3.8"

[tool.setuptools.package-data]
free_deepl_translator = ["json/*.json"]
